force-app/main/default/objects/Library_Book_Loan__c/Library_Book_Loan__c.object-meta.xml
<CustomObject>
    <description>This object represents loaned books to contacts</description>
    <label>Library Book Loan</label>
    <nameField>
        <label>Library Book Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Library Book Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>