force-app/main/default/objects/Library_Book_Loan__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Borrower</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Library Book Loans</relationshipLabel>
    <relationshipName>Library_Book_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>