force-app/main/default/objects/Library_Book_Loan__c/validationRules/StartDateBeforeEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateBeforeEndDate</fullName>
    <active>true</active>
    <description>Validates that the Loan Start Date is before Loan End Date</description>
    <errorConditionFormula>Loan_Start_Date__c &gt;  Loan_End_Date__c</errorConditionFormula>
    <errorMessage>Loan Start Date cannot be later than Loan End Date. Please enter a valid date range.</errorMessage>
</ValidationRule>